# coro

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: config.cmake.in
source/: CMakeLists.txt
source/coro/: CMakeLists.txt  generator.cpp  generator.h  generator.impl.h  iterator.cpp  iterator.h  iterator.impl.h  memory.cpp  memory.h  task.cpp  task.h  task.impl.h  traits.cpp  traits.h  utils.cpp  utils.h  utils.impl.h
source/test/integration/fetch_content/: CMakeLists.txt
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt  main.cpp
source/test/unittests/: CMakeLists.txt  generator.test.cpp  memory.test.cpp  task.test.cpp
tools/: gen-cmake.py
